automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<!-- Write your HTML in this file -->
+<!doctype html>
+<html>
+  <head>
+    <!--THIS IS STUFF UNDER THE HOOD AKA THE ENGINE; HERE IS WHERE WE LINK STUFF-->
+    <title>HAILEY IS SUPER COOL</title>
+      <link href="https://fonts.googleapis.com/css?family=Knewave" rel="stylesheet">
+  </head>
+  <h3>HAILEY IS SUPER COOL</h3>
+  <body>
+  </body>
+</html>
